--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,10 @@ body {
   position: relative;
   isolation: isolate;
 }
+
+.container::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  height: 100%;
+  width: 100%;
