--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,8 @@ body {
   top: 0;
   height: 100%;
   width: 100%;
+  grid-column: 1/5;
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.05);
+  z-index: -1;
+}
