--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,14 @@ body {
   background-color: rgba(255, 255, 255, 0.05);
   z-index: -1;
 }
+
+.content {
+  min-height: 100vh;
+  width: 100%;
+  max-width: 450px;
+  margin-inline: auto;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
