--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,11 @@ body {
   color: var(--white);
   text-align: center;
 }
+
+.content p {
+  margin-bottom: 2rem;
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: var(--text-light);
+  text-align: center;
+}
