--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,9 @@ body {
   display: grid;
   gap: 5px;
 }
+
+.input__group label {
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: var(--white);
+}
