--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,13 @@ body {
   font-weight: 500;
   color: var(--white);
 }
+
+.input__group input {
+  padding: 0.75rem 0;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  color: var(--white);
+  background-color: transparent;
+  border-bottom: 1px solid var(--text-light);
+}
