--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,12 @@ body {
   color: var(--text-dark);
   background-color: var(--text-light);
 }
+
+@media (width > 768px) {
+  .container {
+    grid-template-columns:
+      minmax(0, 1fr)
+      minmax(0, calc(var(--max-width) / 2))
+      minmax(0, calc(var(--max-width) / 2))
+      minmax(0, 1fr);
+  }
