--- a/styles.css
+++ b/styles.css
@@ -139,3 +139,8 @@ body {
       minmax(0, calc(var(--max-width) / 2))
       minmax(0, 1fr);
   }
+
+  .container::before {
+    grid-column: 3/5;
+    border-left: 1px solid var(--text-light);
+  }
